<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:background="@drawable/border_blue"
    android:padding="5dp" >

    <ImageView
        android:id="@+id/imageView_medicine"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:contentDescription="@string/medicinePhoto"
        android:scaleType="fitXY" />

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@id/imageView_medicine"
        android:layout_toRightOf="@id/imageView_medicine" >

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView_type"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView_name"
            android:contentDescription="@string/typePhoto" />

      <TextView
            android:id="@+id/textView_doseLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textView_name"
            android:text=""
            android:textColor="@android:color/black"
            android:textSize="15sp" />

    <!--    <TextView
            android:id="@+id/textView_dose"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView_name"
            android:layout_toEndOf="@id/textView_doseLabel"
            android:layout_toRightOf="@id/textView_doseLabel"
            android:textColor="@android:color/black"
            android:textSize="15sp" />-->

        <TextView
            android:layout_below="@+id/textView_name"
            android:id="@+id/textView_startDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/from"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:layout_below="@+id/textView_name"
            android:id="@+id/textView_startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toEndOf="@id/textView_startDateLabel"
            android:layout_toRightOf="@id/textView_startDateLabel"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_endDateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/textView_startDateLabel"
            android:text="@string/to"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@id/textView_startDate"
            android:layout_toEndOf="@id/textView_endDateLabel"
            android:layout_toRightOf="@id/textView_endDateLabel"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </RelativeLayout>

</RelativeLayout>