<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout_captureImage"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="?android:attr/selectableItemBackground"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp">

            <ImageView
                android:id="@+id/imageView_medicinePhoto"
                android:layout_width="160dp"
                android:layout_height="120dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/border_edit_text"
                android:contentDescription="@string/medicinePhoto"
                android:padding="10dp"
                android:scaleType="fitCenter" />

            <LinearLayout
                android:id="@+id/linearLayout_captureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@id/imageView_medicinePhoto"
                android:layout_toRightOf="@id/imageView_medicinePhoto"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/captureImage"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/captureImage"
                    android:src="@drawable/camera_icon" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageView_captureArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/arrow"
                android:src="@drawable/arrow_more" />
        </RelativeLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="horizontal"
            android:padding="5sp"
            android:weightSum="12">

            <TextView
                style="@style/TextView.Labels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/name" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editText_medicineName"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:maxLength="30" />
        </LinearLayout>

        <include layout="@layout/separator" />

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="horizontal"

            android:padding="5sp"
            android:weightSum="12">

            <TextView
                style="@style/TextView.Labels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/type" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Spinner
                android:id="@+id/spinner_medicineType"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/border_edit_text" />
        </LinearLayout>-->


        <!-- <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#DADADA"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="5sp"
             android:weightSum="12">

             <TextView
                 style="@style/TextView.Labels"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="4"
                 android:text="@string/dose" />

             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />

             <Spinner
                 android:id="@+id/spinner_medicineDose"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="7"
                 android:background="@drawable/border_edit_text"
                 android:padding="10dip" />
         </LinearLayout>
 -->
        <LinearLayout
            android:id="@+id/linearLayout_startDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="horizontal"
            android:padding="5sp"
            android:weightSum="12">

            <TextView
                style="@style/TextView.Labels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/startDate" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_startDate"
                style="@style/TextView.Details"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/border_edit_text"
                android:padding="10dip"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:id="@+id/linearLayout_endDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="horizontal"
            android:padding="5sp"
            android:weightSum="12">

            <TextView
                style="@style/TextView.Labels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/endDate" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView_endDate"
                style="@style/TextView.Details"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@drawable/border_edit_text"
                android:padding="10dip"
                android:textStyle="bold" />
        </LinearLayout>

        <include layout="@layout/separator" />

        <LinearLayout
            android:id="@+id/linearLayout_startTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="vertical"
            android:padding="5sp"
            android:weightSum="12">

            <TextView
                style="@style/TextView.Labels"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:text="Choose time to alert"
                android:textAlignment="center" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5sp"
                android:weightSum="12">

                <LinearLayout
                    android:id="@+id/layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textviewid"
                        style="@style/TextView.Details"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="10dip"
                        android:text="Morning"
                        android:textAlignment="center"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/textView_startTime"
                        style="@style/TextView.Details"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/border_edit_text"
                        android:padding="10dip"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinMor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/intake_habit"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_noon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvnoom"
                        style="@style/TextView.Details"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="10dip"
                        android:text="Noon"
                        android:textAlignment="center"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/textView_midTime"
                        style="@style/TextView.Details"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/border_edit_text"
                        android:padding="10dip"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinMid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/intake_habit" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_night"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvnight"
                        style="@style/TextView.Details"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="10dip"
                        android:text="Evening"
                        android:textAlignment="center"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/textView_endTime"
                        style="@style/TextView.Details"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/border_edit_text"
                        android:padding="10dip"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinEve"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/intake_habit" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/separator" />

        <!--       <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:background="#DADADA"
                   android:orientation="horizontal"
                   android:padding="5sp"
                   android:weightSum="12">

                   <TextView
                       style="@style/TextView.Labels"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="4"
                       android:text="@string/interval" />

                   <View
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="1" />

                   <EditText
                       android:id="@+id/editText_medicineInterval"
                       style="@style/EditText"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_marginEnd="5dp"
                       android:layout_marginRight="5dp"
                       android:layout_weight="2"
                       android:inputType="number"
                       android:maxLength="2" />

                   <Spinner
                       android:id="@+id/spinner_medicineInterval"
                       android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:layout_weight="4"
                       android:background="@drawable/border_edit_text"
                       android:padding="10dip" />
               </LinearLayout>

               <include layout="@layout/separator" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#DADADA"
            android:orientation="horizontal"
            android:padding="5sp"
            android:weightSum="12">

            <TextView
                style="@style/TextView.Labels"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="@string/notes" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/editText_medicineNotes"
                style="@style/EditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:lines="2"
                android:maxLength="20"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
